--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
 
         <div class="Home-box">
-          <a class="Home-text" href="Home.html" >Home</a>
+          <a class="Home-text" href="index.html" >Home</a>
         </div>
 
         <div class="Donation-box">
