--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -23,7 +23,7 @@
         
 
         <div class="Home-box">
-          <a class="Home-text" href="Home.html" >Home</a>
+          <a class="Home-text" href="index.html" >Home</a>
         </div>
 
         <div class="Donation-box">
