--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -73,7 +73,7 @@
             <div class="Email">
               <img class="Contacts-icon" src="Images/mail.png">
               <p class="Email-text">
-                abc@xyz.com
+                craftboxcommunity@gmail.com
               </p>
             </div>
 
@@ -81,7 +81,7 @@
               <img class="Contacts-icon" src="Images/socials.png">
               
               <p class="Socials-text">
-                @abcxyz
+                @craftbox_community
               </p> 
             </div>
 
